# SelfRoutingRAG_System

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/config/: config.py
src/doc_ingestion/: doc_processor.py
src/eval/: metrics.py  run_eval.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
